# RAG

./: CLAUDE.md  pyproject.toml
examples/: basic_usage.py  compare_chunkers.py  pdf_usage.py  ragas_eval.py
src/llm_chunker/: __init__.py  baselines.py  chunker.py  llm_client.py  prompts.py  vectorstore.py
tests/: test_chunker.py
