[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-chunker"
version = "0.1.0"
description = "LLM-powered semantic chunking library for RAG"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ivan Antunovic"}]
keywords = ["rag", "chunking", "llm", "nlp", "semantic", "retrieval"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
eval = ["ragas>=0.1.0", "chromadb>=0.5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_chunker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
